--- a/frontend/src/app/admin-landing/admin-landing.component.html
+++ b/frontend/src/app/admin-landing/admin-landing.component.html
@@ -120,7 +120,7 @@
                     <!-- <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron
                         look. Then, mix and match with additional component themes and more.</p> -->
                     <div class="d-grid gap-2 ">
-                        <button class="btn btn-outline-light margin-20" type="button">See All Items </button>
+                        <button class="btn btn-outline-light margin-20" type="button" (click)="seeAll()">See All Items </button>
                     </div>
 
                 </div>
