--- a/frontend/src/app/books-list/books-list.component.html
+++ b/frontend/src/app/books-list/books-list.component.html
@@ -135,13 +135,15 @@
           <div *ngFor="let b of booksList">
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                   xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                   preserveAspectRatio="xMidYMid slice" focusable="false">
                   <title>Placeholder</title>
                   <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                     dy=".3em">Thumbnail</text>
-                </svg>
+                </svg> -->
+
+                <img src="{{'data:image/jpg;base64,' + b.pic}}" />
 
                 <div class="card-body">
                   
