--- a/frontend/src/app/admin-landing/admin-landing.component.html
+++ b/frontend/src/app/admin-landing/admin-landing.component.html
@@ -82,6 +82,10 @@
         .margin-20 {
             margin-top: 20px;
         }
+
+        .margin-top-row {
+            margin-top : 2vh;
+        }
     </style>
 
 
@@ -114,7 +118,7 @@
         </div>
 
         <div class="row align-items-md-stretch">
-            <div class="col-md-6">
+            <div class="col-md-6 margin-top-row">
                 <div class="h-100 p-5 text-bg-dark rounded-3">
                     <h2 class="align-center">See all of my items</h2>
                     <!-- <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron
@@ -125,7 +129,7 @@
 
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 margin-top-row">
                 <div class="h-100 p-5 bg-light border rounded-3">
                     <h2 class="align-center">Add items to be sold</h2>
                     <!-- <p>Or, keep it light and add a border for some added definition to the boundaries of your
@@ -134,6 +138,19 @@
 
                     <div class="d-grid gap-2 ">
                         <button class="btn btn-outline-secondary margin-20" type="button" (click)="addItem()">Add Items</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-6 margin-top-row">
+                <div class="h-100 p-5 bg-light border rounded-3">
+                    <h2 class="align-center">Get all past orders</h2>
+                    <!-- <p>Or, keep it light and add a border for some added definition to the boundaries of your
+                        content. Be sure to look under the hood at the source HTML here as we've adjusted the
+                        alignment and sizing of both column's content for equal-height.</p> -->
+
+                    <div class="d-grid gap-2 ">
+                        <button class="btn btn-outline-secondary margin-20" type="button" (click)="getPastOrder()">Get Past Orders</button>
                     </div>
 
                 </div>
