--- a/frontend/src/app/books-list/books-list.component.html
+++ b/frontend/src/app/books-list/books-list.component.html
@@ -121,7 +121,7 @@
           <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator,
             etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
+            <a class="btn btn-primary my-2" [routerLink]="['/admin-landing']">Back to Landing Page</a>
             <a href="#" class="btn btn-secondary my-2">Secondary action</a>
           </p>
         </div>
