--- a/frontend/src/app/past-order-list/past-order-list.component.html
+++ b/frontend/src/app/past-order-list/past-order-list.component.html
@@ -1,5 +1,3 @@
-<!-- <p>cart works!</p> -->
-
 <!doctype html>
 <html lang="en">
 
@@ -84,9 +82,6 @@
         }
     </style>
 
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="pricing.css" rel="stylesheet"> -->
 </head>
 
 <!-- <body> -->
@@ -100,7 +95,7 @@
 </svg>
 
 <div class="container py-3">
-    <form [formGroup]="bookOrderForm" (ngSubmit)="processForm()">
+    <!-- <form [formGroup]="bookOrderForm" (ngSubmit)="processForm()"> -->
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
@@ -123,14 +118,14 @@
             </div>
 
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                <h1 class="display-4 fw-normal">My Cart</h1>
+                <h1 class="display-4 fw-normal">Past Orders </h1>
                 <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with
                     this Bootstrap example. It’s built with default Bootstrap components and utilities with little
                     customization.</p>
             </div>
         </header>
 
-        <main *ngIf="productList.length > 0 ">
+        <main>
             <!-- <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm">
@@ -199,38 +194,39 @@
                             <th style="width: 22%;">Pro</th>
                             <th style="width: 22%;">Enterprise</th> -->
 
-                            <th>No.</th>
-                            <th>Book Title</th>
-                            <th>Book Image</th>
-                            <th>Price</th>
-                            <th>Quantity</th>
-                            <th>Sub-Total</th>
-
+                            <th>Date</th>
+                            <th>Order Id </th>
+                            <th>Total Cost</th>
+                           
                             <th>Action</th>
                         </tr>
                     </thead>
 
-                    <tbody formArrayName="bookLineOrder">
-                        <tr *ngFor="let item of productList, let i = index">
-                            <td> {{ i+1 }} </td>
+                    <tbody >
+                        <tr *ngFor="let h of bookOrderHistory ">
+                            <td> 
+                                {{ h.ts }}
+                            </td>
                             <td>
                                 <!-- <input type="text" readonly class="form-control-plaintext" id="firstName"> -->
-                                {{ item.title }}
+                                <!-- {{ item.title }} -->
+                                {{ h.ord_id }}
                             </td>
-                            <td></td>
-                            <td> {{ item.price | number : '1.2-2' }} </td>
                             <td>
-                                <!-- <input type="number" value="1" formControlName="quantity" > -->
-                                1
+                                {{ h.total }}
                             </td>
-                            <td> {{ item.price | number : '1.2-2' }} </td>
-                            <td (click)="removeItem(item)">
+                            <!-- <td> {{ item.price | number : '1.2-2' }} </td> -->
+                        
+                            <!-- <td> {{ item.price | number : '1.2-2' }} </td> -->
+                            <td (click)="getOrderDetail(h)">
 
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                <button type="button" class="btn btn-warning btn-sm">More Details</button>
+
+                                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-x-square-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z" />
-                                </svg>
+                                </svg> -->
 
 
                             </td>
@@ -242,12 +238,12 @@
         </main>
 
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
-            <div class="row" *ngIf="productList.length <= 0 ">
+            <div class="row">
                 <div>
                     <h5>There are no items in this cart </h5>
                 </div>
             </div>
-            <div class="row" *ngIf="productList.length > 0 ">
+            <!-- <div class="row" *ngIf="productList.length > 0 ">
 
 
                 <div class="d-flex align-middle">
@@ -258,7 +254,7 @@
                     <div class="p-2">
                         <button class="btn btn-primary" type="submit">Submit Order!</button>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="d-flex justify-content-end">
                 <div class="d-grid gap-2 col-6 mx-auto">
@@ -300,9 +296,9 @@
                         <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
                     </ul>
                 </div> -->
-            </div>
+            <!-- </div> -->
         </footer>
-    </form>
+    <!-- </form> -->
 </div>
 
 
