changes to dialog and delete

--- a/frontend/src/app/past-order-detail/past-order-detail.component.html
+++ b/frontend/src/app/past-order-detail/past-order-detail.component.html
@@ -128,7 +128,7 @@
                                 <h6 class="mb-0"> {{ detail.title }} </h6>
                                 <p class="mb-0 opacity-75">Quantity : {{ detail.quantity }} </p>
                             </div>
-                            <small class="opacity-50 text-nowrap">$ {{ detail.price | number : '1.2-2' }} </small>
+                            <small class="opacity-50 text-nowrap">$ {{ detail.price }} </small>
                         </div>
                     </a>
                 </div>
