--- a/frontend/src/app/past-order-list/past-order-list.component.html
+++ b/frontend/src/app/past-order-list/past-order-list.component.html
@@ -297,6 +297,7 @@
                     </ul>
                 </div> -->
             <!-- </div> -->
+            <button type="button" class="btn btn-warning btn-sm" [routerLink]="['/admin-landing']">Back to Landing Page</button>
         </footer>
     <!-- </form> -->
 </div>
