--- a/frontend/src/app/add-new-items/add-new-items.component.html
+++ b/frontend/src/app/add-new-items/add-new-items.component.html
@@ -113,7 +113,7 @@
 
                             <div class="col-sm-6">
                                 <label for="category" class="form-label">Genre</label>
-                                <input type="text" class="form-control" id="category" placeholder="" formControlName="genre">
+                                <input type="text" class="form-control" id="category" placeholder="" formControlName="genres">
                                
                             </div>
 
